--- a/src/WebApp/Views/Home/Index.cshtml
+++ b/src/WebApp/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
 @{
-    var version = typeof(IdentityServer4.Hosting.IdentityServerMiddleware).Assembly.GetName().Version.ToString();
+    var versionServer = typeof(IdentityServer4.Hosting.IdentityServerMiddleware).Assembly.GetName().Version.ToString();
+    var versionAdmin = typeof(Wangkanai.IdentityAdmin.IdentityAdminMiddleware).Assembly.GetName().Version.ToString();
 }
 
 <div class="welcome-page">
@@ -8,7 +9,9 @@
             <h1>
                 <img class="icon" src="~/icon.jpg">
                 Welcome to IdentityServer4
-                <small>(version @version)</small>
+                <small>(version @versionServer)</small>
+                with IdentityAdmin
+                <small>(versiob @versionAdmin)</small>
             </h1>
         </div>
     </div>
@@ -20,22 +23,13 @@
                 <a href="~/.well-known/openid-configuration">discovery document</a>
                 where you can find metadata and links to all the endpoints, key material, etc.
             </p>
-        </div>
-        <div class="col-sm-8">
-            <p>
-                Click <a href="~/grants">here</a> to manage your stored grants.
-            </p>
             <p>
                 Click <a href="~/admin">here</a> to manage your users and IdentityServer configuration.
             </p>
         </div>
-    </div>
-    <div class="row">
         <div class="col-sm-8">
             <p>
-                Here are links to the
-                <a href="https://github.com/identityserver/IdentityServer4">source code repository</a>,
-                and <a href="https://github.com/IdentityServer/IdentityServer4/tree/master/samples">ready to use samples</a>.
+                Click <a href="~/grants">here</a> to manage your stored grants.
             </p>
         </div>
     </div>
