--- a/src/WebApp/Views/Home/Index.cshtml
+++ b/src/WebApp/Views/Home/Index.cshtml
@@ -8,10 +8,10 @@
         <div class="col-sm-10">
             <h1>
                 <img class="icon" src="~/icon.jpg">
-                Welcome to IdentityServer4
+                Welcome to IdentityAdmin
+                <small>(version @versionAdmin)</small><br>
+                For IdentityServer 4
                 <small>(version @versionServer)</small>
-                with IdentityAdmin
-                <small>(versiob @versionAdmin)</small>
             </h1>
         </div>
     </div>
@@ -19,12 +19,12 @@
     <div class="row">
         <div class="col-sm-8">
             <p>
+                Click <a href="~/admin">here</a> to manage your users and IdentityServer configuration.
+            </p>
+            <p>
                 IdentityServer publishes a
                 <a href="~/.well-known/openid-configuration">discovery document</a>
                 where you can find metadata and links to all the endpoints, key material, etc.
-            </p>
-            <p>
-                Click <a href="~/admin">here</a> to manage your users and IdentityServer configuration.
             </p>
         </div>
         <div class="col-sm-8">
