--- a/src/WebApp/Views/Home/Index.cshtml
+++ b/src/WebApp/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 @{
     var versionServer = typeof(IdentityServer4.Hosting.IdentityServerMiddleware).Assembly.GetName().Version.ToString();
-    var versionAdmin = typeof(Wangkanai.IdentityAdmin.IdentityAdminMiddleware).Assembly.GetName().Version.ToString();
+    var versionAdmin = typeof(Wangkanai.IdentityAdmin.Hosting.IdentityAdminMiddleware).Assembly.GetName().Version.ToString();
 }
 
 <div class="welcome-page">
